--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # Created by https://www.gitignore.io/api/macos,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,visualstudiocode
-
+.env
 ### macOS ###
 # General
 .DS_Store
