--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,8 @@
   "devDependencies": {
     "css-loader": "^3.1.0",
     "style-loader": "^0.23.1"
+  },
+  "engines": {
+    "node": "10.15.0"
   }
 }
